# agoragentic-integrations

./: .gitignore  ACP_REGISTRY.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  SKILL.md  gemini-extension.json  glama.json  integrations.json  integrations.schema.json  llms-full.txt  llms-install.md  llms.txt  pyproject.toml  submit-prs.mjs
.claude-plugin/: marketplace.json
.cursor-plugin/: plugin.json
a2a/: README.md  agent-card.json
acp/: README.md  agent.json
ag-ui/: README.md  agoragentic-ag-ui.example.json  agoragentic_ag_ui.ts  test.js
agent-os/: README.md  agent_os_node.mjs  agent_os_python.py
agentscope/: README.md
agenttax/: README.md  agoragentic_agenttax.ts
agno/: README.md  agoragentic_agno.py
autogen/: README.md  agoragentic_autogen.py  example_autogen.ipynb  example_autogen.py
autogpt/: README.md  agoragentic_autogpt.py
base-ecosystem/: README.md
bedrock-agentcore/: README.md  agentcore-policy-mapping.example.json  agoragentic_agentcore.py
bee-agent/: README.md  agoragentic_bee.js
browser-use/: README.md
camel/: README.md  agoragentic_camel.py
cashclaw/: README.md
chatkit/: README.md  agoragentic-chatkit-tool.example.ts
claude-agent-sdk/: README.md  agoragentic_claude_agent.py  agoragentic_claude_agent.ts  permissions.example.json
claude-code/: README.md
claude-view/: README.md  claude_view.get_live_summary.manifest.json
cline/: README.md
cloudflare-agents/: README.md  agoragentic_cloudflare_agent.ts
coinbase-agentic-wallets/: README.md  agoragentic_agentic_wallet.ts
composio/: README.md  agoragentic_composio.py
crewai/: README.md  agoragentic_crewai.py
cursor/: README.md
dashclaw/: README.md  agoragentic_dashclaw.mjs
deepagents/: README.md
deliverables/: 2026-06-11-create-pr-in-rhein1-agoragentic-integrat.md  2026-06-12-create-pr-in-rhein1-agoragentic-integrat.md  2026-06-13-create-pr-in-rhein1-agoragentic-integrat.md  2026-06-14-create-pr-in-rhein1-agoragentic-integrat.md  2026-06-14-open-a-pr-in-rhein1-agoragentic-integrat.md  2026-06-15-create-draft-pr-in-rhein1-agoragentic-in.md  2026-06-15-create-pr-in-rhein1-agoragentic-integrat.md  2026-06-15-create-pr-to-rhein1-agoragentic-integrat.md  2026-06-16-create-draft-pr-in-rhein1-agoragentic-in.md  2026-06-16-create-pr-in-rhein1-agoragentic-integrat.md  2026-06-17-create-pr-in-rhein1-agoragentic-integrat.md  2026-06-17-draft-a-github-issue-in-rhein1-agoragent.md
dfns/: README.md  agoragentic_dfns.ts
dify/: README.md  agoragentic_provider.json
docs/: ADAPTER_CONFORMANCE_AGENT.md  DISTRIBUTION.md  ECOSYSTEM_WALKTHROUGHS.md  GLOSSARY.md  TROUBLESHOOTING.md  catalog-profile.json
dspy/: README.md
elizaos/: README.md  agoragentic_eliza.ts  elizaos-example.js  example.js  package.json
fast-agent/: README.md
financial-research/: README.md  repo-intake.v1.json
flowise/: README.md  agoragentic-flowise-tool.json  agoragentic_flowise.js
gemini-cli/: README.md
genkit/: README.md
geo-seo/: README.md
google-adk/: README.md  agoragentic_google_adk.py
goose/: README.md  agoragentic_goose.py
gortex/: README.md  gortex.mcp.example.json
griptape/: README.md  adapter.test.py  agoragentic_griptape.py
harness-core/: CHANGELOG.md  README.md  RELEASE_SCOPE.md  TRUSTED_PUBLISHING.md  package-lock.json  package.json
haystack/: README.md  agoragentic_haystack.py
hermes-agent/: README.md  agent-os-bridge.manifest.json  mcp.agoragentic.example.json  reflection-packet.example.json  self-improvement-policy.example.json  verify-hermes-agent.mjs
humanlayer/: README.md  agoragentic_humanlayer.py
interchange/: COMPATIBILITY.md  README.md  SANDBOX_WALKTHROUGH.md  SPEC.md  STATUS.md
kibble/: README.md  agoragentic_kibble.ts
langchain/: README.md  (+2 more)
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: openai_agents_mcp_buyer.py  openai_agents_router_buyer.py
sdk/python/src/agoragentic/: __init__.py  client.py  openai_agents.py  rust_framework_types.py
(+448 files in other folders)
