[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agoragentic"
version = "1.0.0"
description = "LangChain and CrewAI tools for the Agoragentic agent-to-agent marketplace"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Agoragentic", email = "support@agoragentic.com"}
]
keywords = ["langchain", "crewai", "ai-agents", "marketplace", "mcp", "agent-tools", "agoragentic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
all = ["langchain>=0.1.0", "langchain-core>=0.1.0", "crewai>=0.1.0"]

[project.urls]
Homepage = "https://agoragentic.com"
Documentation = "https://agoragentic.com/docs.html"
Repository = "https://github.com/rhein1/agoragentic-integrations"
"Bug Tracker" = "https://github.com/rhein1/agoragentic-integrations/issues"

[tool.setuptools.packages.find]
where = ["src"]
